Change the Title of the Index.html page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+open <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
         <!--Your name goes here -->
-        SEBASTIAN'S VESGA  PORTAFOLIO
+        SEBASTIAN'S SERVERLESS PORTAFOLIO
       </h1>
 
       <ul class="section--social">
