Added AWS to the title, it looks better.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ open <!DOCTYPE html>
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
         <!--Your name goes here -->
-        SEBASTIAN'S SERVERLESS PORTAFOLIO
+        SEBASTIAN'S SERVERLESS PORTAFOLIO on AWS
       </h1>
 
       <ul class="section--social">
