--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
         <!--Your name goes here -->
-        SEBASTIAN'S SERVERLESS PORTAFOLIO on AWS
+       SERVERLESS PORTAFOLIO on AWS
       </h1>
 
       <ul class="section--social">
@@ -43,7 +43,7 @@
           </a>
         </li>
 
-        <!-- Link to resume, probably a .pdf -->
+        <!-- Link to AWS Certification -->
         <li class="socialWrapper">
           <a class="social color--skyBlue"
              title="Resume"
@@ -56,8 +56,9 @@
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
-        Portfolio
+        Hello, 
       </h2>
+      <p class="color--cloud margin--none section__text--centered"> Welcome to my Portafolio. This is a quick showcase of what have developed and I'm currently working on</p>
     </section>
 
     <section class="section section--alignCentered section--description">
@@ -95,7 +96,7 @@
         <div class="section__example">
           <img alt="AWS Serverless"
                class="section__exampleImage"
-               src="images/example3.png"/>
+               src="images/aws_architecture.PNG"/>
           <!-- “Bengal cat” by roberto shabs is licensed under CC BY 2.0
                https://www.flickr.com/photos/37287295@N00/2540855181 -->
           <dl class="color--cloud">
