--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sebastian's Serverless Portafolio</title>
+    <title>Sebastian's Serverless Portfolio</title>
     <link rel="stylesheet" href="styles/main.css"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -56,7 +56,7 @@
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
-        Hello, 
+        Hello,
       </h2>
       <p class="color--cloud margin--none section__text--centered"> Welcome to my Portafolio. This is a quick showcase of what have developed and I'm currently working on</p>
     </section>
