changed the title v2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
         <!--Your name goes here -->
-       SERVERLESS PORTAFOLIO on AWS
+       SERVERLESS PORTFOLIO on AWS
       </h1>
 
       <ul class="section--social">
@@ -55,8 +55,8 @@
     </main>
 
     <section class="background--skyBlue section">
-      <h2 class="color--cloud margin--none section__text--centered">
-        Hello,
+      <h2 class="color--cloud margin--none">
+        Hello
       </h2>
       <p class="color--cloud margin--none section__text--centered"> Welcome to my Portafolio. This is a quick showcase of what have developed and I'm currently working on</p>
     </section>
