--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
 
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
-        I am learning to code in the cloud! I like to work hard and learn new things.
-        I want to work for a company that will pay me to code in the cloud!
+        I am learning to code in the cloud!
+        <img alt="AWS Serverless"
+             href="https://www.google.com"
+             src="images/aws_architecture.PNG"/>
       </p>
 
     <div class="background--skyBlue modal--closed">
