Changed the body text

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
-        I am learning to code in the cloud!
+        I am learning to code in the cloud! AWSome!
         <img alt="AWS Serverless"
              href="https://www.google.com"
              src="images/aws_architecture.PNG"/>
