--- a/babel.html
+++ b/babel.html
@@ -3,18 +3,52 @@
   <head>
     <meta charset="utf-8">
     <title>Babel Demostration</title>
+    <style media="screen">
+      .errorBox {
+        border: 1px solid red; 
+        background-color: #eebbbb; 
+        margin: 1em; 
+        padding: 2em;
+      }
+      .errorBox--hidden {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <main>
-      <div id="content"> </div>
+    <label>Name: <input id="name" type="text"/></label> 
+    <button id="submit_info">Click here to submit</button>
+
+    <div id="content"></div>
+    <div id="error" class="errorBox--hidden">
+    Error will fal off here. 
+    </div>
     </main>
 <!-- Load Babel -->
 <!-- v6 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <!-- Your custom script here -->
   <script type="text/babel">
+    
     const getMessage = (name) => `Welcome to JavaScript , ${name}!`;
-    document.getElementById('content').textContent = getMessage("Sebastian");
+    const button = document.getElementById('submit_info');
+    const contentArea = document.getElementById('content');
+    const messageArea = document.getElementById("error");
+
+    button.addEventListener('click', (evt) => {
+      messageArea.className = "errorBox--hidden";
+      contentArea.textContent =""; 
+
+      let name = document.getElementById("name").value;
+      if (name.length < 2){
+        messageArea.textContent = "You need to enter a name"; 
+        messageArea.className = "errorBox"
+      }
+      else{
+        contentArea.textContent = getMessage(name);
+      }
+    });
   </script>
   </body>
 </html>
