--- a/react.html
+++ b/react.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Demostration</title>
+    <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
     <style media = "screen">
         .messageBox {
             border: 1px solid;
@@ -29,9 +30,13 @@
     <main id="content">
 
     </main>
+    <div id="mocha"></div>
     <script src="https://unpkg.com/babel-standalone"></script>
     <script type="text/javascript" src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/chai@4.0.2/chai.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/mocha@3.4.2/mocha.js"></script>
+
     <script type="text/babel" data-preset="react">
       class NameInput extends React.Component{
         constructor(props) {
@@ -62,7 +67,7 @@
           return (
             <div>
               <label> Name: <input ref="nameInput" ype ="text" /></label>
-              <button onClick={this.buttonClicked}> Click Me</button>
+              <button id="inputButton" onClick={this.buttonClicked}> Click Me</button>
 
               <MessageBox type={msg.type} message={msg.body} />
             </div>
@@ -84,5 +89,50 @@
 
 
     </script>
+
+    <script type="text/babel" data-preset="react">
+
+    const assert = chai.assert;
+
+    mocha.ui("bdd");
+    mocha.reporter("html");
+
+    describe("Examples Tests", () => {
+      it("Proved that math works", () => {
+        assert.equal(5, 3+2, "Math works!");
+        assert.notEqual(3+2, 6, "Math still works");
+      });
+
+      it("Found our component", () => {
+        assert.isDefined(MessageBox, "Our MessageBox component is defined.");
+      });
+
+      it("Let us test a function", () => {
+        let myName = "Robin";
+        const greet = (name) => "Hello, " + name + "!";
+
+        assert.include(greet(myName), myName, "Greeting Includes Name");
+      });
+    });
+
+    describe("Document tests", () => {
+      it("Rendered an Empty MessageBox", () => {
+        let msgBox = document.querySelector(".messageBox");
+        assert.isDefined(msgBox, "Message Box is in the document");
+        assert.included(msgBox.classList.value, "hidden", "Message box is hidden");
+        assert.equal(msgBox.innerText, "", "Message Box is Empty");
+      });
+
+      it("Rendered an error when name is empty", () => {
+        let msgBox = document.querySelector(".messageBox");
+        let button = document.querySelector("#inputButton");
+        button.click()
+        assert.include(msgBox.classList.value, "error", "Message box type is error");
+      });
+    });
+
+      mocha.run();
+    </script>
+
 </body>
 </html>
