--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </li>
 
         <!-- Link to GitHub profile -->
-        <li class="socialWrapper color--skyBlue">
+        <li class="socialWrapper">
           <a class="social color--skyBlue"
              title="GitHub Profile"
              target="_blank"
@@ -46,7 +46,8 @@
         <!-- Link to AWS Certification -->
         <li class="socialWrapper">
           <a class="social color--skyBlue"
-             title="Resume"
+             title="AWS Cert"
+             target="_blank"
              href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&t=c&d=2020-02-14&ci=AWS01280806&dm=80">
             <i class="fa fa-amazon" aria-hidden="true"></i>
           </a>
@@ -61,53 +62,7 @@
       <p class="color--cloud margin--none section__text--centered"> Welcome to my Portafolio. This is a quick showcase of what have developed and I'm currently working on</p>
     </section>
 
-    <section class="section section--alignCentered section--description">
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="Wordpress Work"
-               class="section__exampleImage"
-               src="images/example1.png"/>
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              Wordpress Work
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="Adobe DX Design"
-               class="section__exampleImage"
-               src="images/example2.png"/>
-          <!-- “Chemistry” by Surian Soosay is licensed under CC BY 2.0
-               https://www.flickr.com/photos/ssoosay/4097410999 -->
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered ">
-              Adobe DX Design
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="AWS Serverless"
-               class="section__exampleImage"
-               src="images/aws_architecture.PNG"/>
-          <!-- “Bengal cat” by roberto shabs is licensed under CC BY 2.0
-               https://www.flickr.com/photos/37287295@N00/2540855181 -->
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              AWS Serverless
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-    </section>
+    <div id="example-work"></div>
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
