Used beautify to make the code look better

--- a/index.html
+++ b/index.html
@@ -1,96 +1,86 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Sebastian's Serverless Portfolio</title>
-    <link rel="stylesheet" href="styles/main.css"/>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<head>
+  <meta charset="utf-8">
+  <title>Sebastian's Serverless Portfolio</title>
+  <link rel="stylesheet" href="styles/main.css" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo"/>
-  </head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-  <body>
-    <main class="overflow--auto">
-      <h1 class="color--skyBlue section__heading--largest">
-        <!--Your name goes here -->
-       SERVERLESS PORTFOLIO on AWS
-      </h1>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo" />
+</head>
 
-      <ul class="section--social">
+<body>
+  <main class="overflow--auto">
+    <h1 class="color--skyBlue section__heading--largest">
+      <!--Your name goes here -->
+      SERVERLESS PORTFOLIO on AWS
+    </h1>
 
-        <!--Links to relevant professional social media & resume -->
-        <!-- See: http://fontawesome.io/icons/#brand for more -->
+    <ul class="section--social">
 
-        <!-- Link to Linked In profile -->
-        <li class="socialWrapper">
-          <a class="color--skyBlue social"
-             title="LinkedIn Profile"
-             target="_blank"
-             href="https://www.linkedin.com/in/vmsebastian/">
-            <i class="fa fa-linkedin"></i>
-          </a>
-        </li>
+      <!--Links to relevant professional social media & resume -->
+      <!-- See: http://fontawesome.io/icons/#brand for more -->
 
-        <!-- Link to GitHub profile -->
-        <li class="socialWrapper">
-          <a class="social color--skyBlue"
-             title="GitHub Profile"
-             target="_blank"
-             href="https://github.com/Calilife">
-            <i class="fa fa-github"></i>
-          </a>
-        </li>
+      <!-- Link to Linked In profile -->
+      <li class="socialWrapper">
+        <a class="color--skyBlue social" title="LinkedIn Profile" target="_blank"
+          href="https://www.linkedin.com/in/vmsebastian/">
+          <i class="fa fa-linkedin"></i>
+        </a>
+      </li>
 
-        <!-- Link to AWS Certification -->
-        <li class="socialWrapper">
-          <a class="social color--skyBlue"
-             title="AWS Cert"
-             target="_blank"
-             href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&t=c&d=2020-02-14&ci=AWS01280806&dm=80">
-            <i class="fa fa-amazon" aria-hidden="true"></i>
-          </a>
-        </li>
-      </ul>
-    </main>
+      <!-- Link to GitHub profile -->
+      <li class="socialWrapper">
+        <a class="social color--skyBlue" title="GitHub Profile" target="_blank" href="https://github.com/Calilife">
+          <i class="fa fa-github"></i>
+        </a>
+      </li>
 
-    <section class="background--skyBlue section">
-      <h2 class="color--cloud margin--none">
-        Hello
-      </h2>
-      <p class="color--cloud margin--none section__text--centered"> Welcome to my Portafolio. This is a quick showcase of what have developed and I'm currently working on</p>
-    </section>
+      <!-- Link to AWS Certification -->
+      <li class="socialWrapper">
+        <a class="social color--skyBlue" title="AWS Cert" target="_blank"
+          href="https://www.certmetrics.com/amazon/public/badge.aspx?i=9&t=c&d=2020-02-14&ci=AWS01280806&dm=80">
+          <i class="fa fa-amazon" aria-hidden="true"></i>
+        </a>
+      </li>
+    </ul>
+  </main>
 
-    <div id="example-work"></div>
+  <section class="background--skyBlue section">
+    <h2 class="color--cloud margin--none">
+      Hello
+    </h2>
+    <p class="color--cloud margin--none section__text--centered"> Welcome to my Portafolio. This is a quick showcase of
+      what have developed and I'm currently working on</p>
+  </section>
 
-    <section class="background--skyBlue section">
-      <h2 class="color--cloud margin--none section__text--centered">
-        About Me
-      </h2>
-    </section>
+  <div id="example-work"></div>
 
-    <section class="section section--alignCentered section--description">
-      <p class="color--darkgrey section__description">
-        I am learning to code in the cloud! AWSome!
-        <img alt="AWS Serverless"
-             href="https://www.google.com"
-             src="images/aws_architecture.PNG"/>
-      </p>
+  <section class="background--skyBlue section">
+    <h2 class="color--cloud margin--none section__text--centered">
+      About Me
+    </h2>
+  </section>
+
+  <section class="section section--alignCentered section--description">
+    <p class="color--darkgrey section__description">
+      I am learning to code in the cloud! AWSome!
+      <img alt="AWS Serverless" href="https://www.google.com" src="images/aws_architecture.PNG" />
+    </p>
 
     <div class="background--skyBlue modal--closed">
       <span class="color--cloud modal__closeButton">
         <i class="fa fa-window-close-o"></i>
       </span>
-      <img alt="example screenshot of a project involving code"
-           class="modal__image"
-           src="images/example1.png"/>
+      <img alt="example screenshot of a project involving code" class="modal__image" src="images/example1.png" />
       <div class="color--cloud modal__text">
         <h2 class="modal__title">
           Work Example Name
         </h2>
-        <a class="color--skyBlue modal__link"
-           href="#">
+        <a class="color--skyBlue modal__link" href="#">
           Check it out
         </a>
         <p class="modal__description">
@@ -101,5 +91,6 @@
 
     <script type="text/javascript" src="dist/bundle.js"> </script>
 
-  </body>
+</body>
+
 </html>
